# events-aggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UML_diagram.mmd  docker-compose.yml  pyproject.toml  requirements-prod.txt  ruff.toml  run.sh
alembic/: env.py
app/: config.py  database.py  deps.py  main.py  scheduler.py
tests/: conftest.py
wheels/: asyncpg-0.31.0-cp312-cp312-manylinux_2_28_aarch64.whl  charset_normalizer-3.4.9-cp312-cp312-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  fastapi_cli-0.0.22-py3-none-any.whl  fastapi_cloud_cli-0.12.0-py3-none-any.whl  fastapi_cloud_cli-0.22.2-py3-none-any.whl  fastar-0.11.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  fastar-0.11.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  greenlet-3.2.5-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  greenlet-3.5.3-cp312-cp312-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  greenlet-3.5.3-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  httptools-0.8.0-cp312-cp312-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  pydantic_core-2.46.4-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  rignore-0.7.6-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  rignore-0.7.6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  sentry_sdk-2.65.0-py3-none-any.whl  sqlalchemy-2.0.51-cp312-cp312-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  sqlalchemy-2.0.51-py3-none-any.whl  websockets-16.1-py3-none-any.whl  (+5 more)
(+46 files in other folders)
